[tool.poetry]
name = "wx-explore"
version = "0.1.0"
description = ""
authors = ["Nick Gregory <computerfreak97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "1.1.2"
flask-sqlalchemy = "2.4.4"
flask-cors = ">=3.0,<4.0"
psycopg2-binary = "^2.9.9"
pq = ">=1.9,<2.0"
geoalchemy2 = "0.8.4"
shapely = "1.7.1"
pygrib = "2.1.6"
scipy = "^1.14.0"
urllib3 = ">=1.25.4"
requests = ">=2.25,<3.0"
pillow = "8.1.0"
boto3 = ">=1.16,<2.0"
pymongo = ">=3.11,<4.0"
sentry-sdk = {version = "0.14.2", extras = ["flask"]}
aws-requests-auth = "0.4.2"
pyshp = "2.1.3"
pygeoif = "0.7"
pytz = "^2024.1"
azure-cosmosdb-table = "1.0.6"
opentelemetry-api = "1.3.0"
opentelemetry-sdk = "1.3.0"
opentelemetry-instrumentation = "0.22b0"
opentelemetry-instrumentation-dbapi = "0.22b0"
opentelemetry-instrumentation-flask = "0.22b0"
opentelemetry-ext-honeycomb = "1.3.0"
opentelemetry-exporter-jaeger-thrift = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
