[tool.poetry]
name = "wx-explore"
version = "0.1.0"
description = ""
authors = ["Nick Gregory <computerfreak97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pq = ">=1.9,<2.0"
pygrib = "2.1.6"
scipy = "^1.14.0"
urllib3 = ">=1.25.4"
requests = ">=2.25,<3.0"
boto3 = ">=1.16,<2.0"
pymongo = ">=3.11,<4.0"
aws-requests-auth = "0.4.2"
pyshp = "2.1.3"
pygeoif = "0.7"
pytz = "^2024.1"
azure-cosmosdb-table = "1.0.6"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
sentry-sdk = "^2.12.0"
shapely = "^2.0.5"
pillow = "^10.4.0"
geoalchemy2 = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
